Fix some linter issues